--- a/inicio.html
+++ b/inicio.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A. G. P. Magalhaes</title>
+    <title>A. G. P. Magalhães</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,20 +13,20 @@
     <header>
         <nav class="navbar">
 
-            <a href="index.html"><img src="logo_mais_nome.jpg" alt="logo showing a blue butterfly." class="nav-branding"></a>
+            <a href="inicio.html"><img src="logo_mais_nome.jpg" alt="logo mostrando uma borboleta azul." class="nav-branding"></a>
 
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="inicio.html" class="nav-link">Início</a>
                 </li>
                 <li class="nav-item">
-                    <a href="about.html" class="nav-link">About</a>
+                    <a href="sobre.html" class="nav-link">Sobre</a>
                 </li>
                 <li class="nav-item">
-                    <a href="contact.html" class="nav-link">Contact</a>
+                    <a href="contato.html" class="nav-link">Contato</a>
                 </li>
                 <li class="nav-item">
-                    <a href="inicio.html" class="nav-link">PT-BR</a>
+                    <a href="index.html" class="nav-link">EN</a>
                 </li>
             </ul>
 
@@ -47,57 +47,59 @@
 
     <section class="presentation">
 
-        <p>Hello, my name is A. G. P. Magalhaes, I'm a Web Developer and this is my portfolio. You can walk through my projects to learn more about it or you can find out a little more about me by <a href="">clicking here</a>.</p>
-        <img src="foto_perfil.jpg" alt="a photograph of A. G. P. Magalhaes, a latin girl with a long black hair, white skin">
+        <p>Olá, meu nome é A. G. P. Magalhães, eu sou uma Web Developer e este é meu portfólio. Você pode passear por meus projetos para aprender mais sobre eles ou pode descobrir um pouco mais sobre mim <a href="">clicando aqui</a>.</p>
+
+        <img src="foto_perfil.jpg" alt="uma fotografia de A. G. P. Magalhaes, uma garota latina de cabelos escuros e pele clara.">
 
     </section>
 
     <main>
 
-        <h2>Projects</h2>
+        <h2>Projetos</h2>
 
         <div class="projects">
             <ul class="projects-list">
                 <li class="item">
                     <img src="icon_folderblue.png" alt="a blue folder">
-                    <h3>Project</h3>
-                    <button>Show</button>
+                    <h3>Projeto</h3>
+                    <button>Mostrar</button>
                 </li>
                 <li class="item">
                     <img src="icon_folderblue.png" alt="a blue folder">
-                    <h3>Project</h3>
-                    <button>Show</button>
+                    <h3>Projeto</h3>
+                    <button>Mostrar</button>
                 </li>
                 <li class="item">
                     <img src="icon_folderblue.png" alt="a blue folder">
-                    <h3>Project</h3>
-                    <button>Show</button>
+                    <h3>Projeto</h3>
+                    <button>Mostrar</button>
                 </li>
                 <li class="item">
                     <img src="icon_folderblue.png" alt="a blue folder">
-                    <h3>Project</h3>
-                    <button>Show</button>
+                    <h3>Projeto</h3>
+                    <button>Mostrar</button>
                 </li>
                 <li class="item">
                     <img src="icon_folderblue.png" alt="a blue folder">
-                    <h3>Project</h3>
-                    <button>Show</button>
+                    <h3>Projeto</h3>
+                    <button>Mostrar</button>
                 </li>
                 <li class="item">
                     <img src="icon_folderblue.png" alt="a blue folder">
-                    <h3>Project</h3>
-                    <button>Show</button>
+                    <h3>Projeto</h3>
+                    <button>Mostrar</button>
                 </li>
                 <li class="item">
                     <img src="icon_folderblue.png" alt="a blue folder">
-                    <h3>Project</h3>
-                    <button>Show</button>
+                    <h3>Projeto</h3>
+                    <button>Mostrar</button>
                 </li>
                 <li class="item">
                     <img src="icon_folderblue.png" alt="a blue folder">
-                    <h3>Project</h3>
-                    <button>Show</button>
+                    <h3>Projeto</h3>
+                    <button>Mostrar</button>
                 </li>
+                
             </ul>
 
         </div>
