Add About and Contact
Adding pages About and Contact in EN and PT.

--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,9 @@
     <title>A. G. P. Magalhães</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -39,6 +42,30 @@
         </nav>
     </header>
 
+    <section class="social-media">
+
+        <ul class="media-links">
+
+            <li>
+                <a href="https://github.com/agpmagalhaes" target="_blank"><img src="logo github.png" alt=""></a>
+                <a href="https://github.com/agpmagalhaes" target="_blank">agpmagalhaes</a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/alessandragpmagalhaes/" target="_blank"><img src="logo linkedin.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/alessandragpmagalhaes/" target="_blank"> Alessandra Gabrielly Pereira Magalhães</a>
+            </li>
+            <li>
+                <a href="https://agpmagalhaes.com.br/" target="_blank"><img src="Logo web_pequeno.png" alt=""></a>
+                <a href="https://agpmagalhaes.com.br/" target="_blank">agpmagalhaes.com.br</a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/@AGPMagalhaes" target="_blank"><img src="logo youtube.png" alt=""></a>
+                <a href="https://www.youtube.com/@AGPMagalhaes" target="_blank">@AGPMagalhaes</a>
+            </li>
+
+        </ul>
+
+    </section>
 
     <footer>
         <img src="Logo web_pequeno.png" alt="a blue butterfly" id="logo-footer">
