--- a/sobre.html
+++ b/sobre.html
@@ -7,6 +7,9 @@
     <title>A. G. P. Magalhães</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -39,6 +42,20 @@
         </nav>
     </header>
 
+    <section class="about">
+
+        <img class="about-img" src="foto_perfil.jpg" alt="uma fotografia de A. G. P. Magalhaes, uma garota latina de cabelos escuros e pele clara.">
+
+        <div class="about-paragraph">
+
+            <p>Eu sou Alessandra Magalhães, me graduei em Biomedicina pela Universidade Federal de Pernambuco (UFPE), mas em vez disso decidi trocar de carreira e mergulhar na tecnologia.</p>
+            <p>Essa troca aconteceu graças a ajuda da Oracle e da Alura com o programa ONE (Oracle Next Education) e do Instituto Nu em parceiria com a Descomplica.</p>
+            <p>Hoje sou uma Web Developer em desenvolvimento, pois a tecnologia não para e nós também não paramos.</p> 
+            <p>Durante o isolamento, além do treinamento em Front End, eu também consegui meu MBA em Gestão da Inovação, Tecnologia e Empreendedorismo e recentemente decidi criar um canal no YouTube para transmitir para vocês todo esse conhecimento adquirido ao longo de anos.</p>  
+
+        </div>
+
+   </section>
 
     <footer>
         <img src="Logo web_pequeno.png" alt="a blue butterfly" id="logo-footer">
