--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 
         <div class="projects">
             <ul class="projects-list">
-                <li class="item">
-                    <img src="icon_folderblue.png" alt="a blue folder">
-                    <h3>Project</h3>
-                    <button>Show</button>
+                <li class="item" id="formCad-caixa">
+                    <img src="petsepets.jpg" alt="project thumbnail" id="formCad">
+                    <h3>Registration<br>Form</h3>
+                    <button><a href="formCadEn.html">Show</a></button>
                 </li>
                 <li class="item">
                     <img src="icon_folderblue.png" alt="a blue folder">
