--- a/inicio.html
+++ b/inicio.html
@@ -62,10 +62,10 @@
 
         <div class="projects">
             <ul class="projects-list">
-                <li class="item">
-                    <img src="icon_folderblue.png" alt="a blue folder">
-                    <h3>Projeto</h3>
-                    <button>Mostrar</button>
+                <li class="item" id="formCad-caixa">
+                    <img src="petsepets.jpg" alt="miniatura do projeto" id="formCad">
+                    <h3>Formulário<br>de Cadastro</h3>
+                    <button><a href="formCadPt.html">Mostrar</a></button>
                 </li>
                 <li class="item">
                     <img src="icon_folderblue.png" alt="a blue folder">
