--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                     <h3>Registration<br>Form</h3>
                     <button><a href="formCadEn.html">Show</a></button>
                 </li>
-                <li class="item">
-                    <img src="icon_folderblue.png" alt="a blue folder">
-                    <h3>Project</h3>
-                    <button>Show</button>
+                <li class="item" id="barbearia-caixa">
+                    <img src="miniatura-barbearia.jpg" alt="project thumbnail" id="barbearia">
+                    <h3>Barber shop<br>Alura</h3>
+                    <button><a href="barbearia.html">Show</a></button>
                 </li>
                 <li class="item">
                     <img src="icon_folderblue.png" alt="a blue folder">
