--- a/inicio.html
+++ b/inicio.html
@@ -67,10 +67,10 @@
                     <h3>Formulário<br>de Cadastro</h3>
                     <button><a href="formCadPt.html">Mostrar</a></button>
                 </li>
-                <li class="item">
-                    <img src="icon_folderblue.png" alt="a blue folder">
-                    <h3>Projeto</h3>
-                    <button>Mostrar</button>
+                <li class="item" id="barbearia-caixa">
+                    <img src="miniatura-barbearia.jpg" alt="project thumbnail" id="barbearia">
+                    <h3>Barbearia<br>Alura</h3>
+                    <button><a href="barbearia.html">Mostrar</a></button>
                 </li>
                 <li class="item">
                     <img src="icon_folderblue.png" alt="a blue folder">
