--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                     <h3>Barber shop<br>Alura</h3>
                     <button><a href="barbearia.html">Show</a></button>
                 </li>
-                <li class="item">
-                    <img src="icon_folderblue.png" alt="a blue folder">
-                    <h3>Project</h3>
-                    <button>Show</button>
+                <li class="item" id="bodysoul-caixa">
+                    <img src="miniatura-BodySoul.jpg" alt="project thumbnail" id="bodysoul">
+                    <h3>BodySoul <br> Spa</h3>
+                    <button><a href="bodysoulEN.html">Show</a></button>
                 </li>
                 <li class="item">
                     <img src="icon_folderblue.png" alt="a blue folder">
