--- a/inicio.html
+++ b/inicio.html
@@ -72,10 +72,10 @@
                     <h3>Barbearia<br>Alura</h3>
                     <button><a href="barbearia.html">Mostrar</a></button>
                 </li>
-                <li class="item">
-                    <img src="icon_folderblue.png" alt="a blue folder">
-                    <h3>Projeto</h3>
-                    <button>Mostrar</button>
+                <li class="item" id="bodysoul-caixa">
+                    <img src="miniatura-BodySoul.jpg" alt="project thumbnail" id="bodysoul">
+                    <h3>BodySoul <br> Spa</h3>
+                    <button><a href="bodysoulPT.html">Mostrar</a></button>
                 </li>
                 <li class="item">
                     <img src="icon_folderblue.png" alt="a blue folder">
